{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 87,
  "lineage": "fb3185c3-8901-da90-7db6-e33979c71ca2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07035f3ecffdc4dbf",
            "association_id": "eipassoc-07f318782faa27549",
            "domain": "vpc",
            "id": "eipalloc-07035f3ecffdc4dbf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d4f699775a77132c",
            "private_dns": "ip-10-0-0-94.ec2.internal",
            "private_ip": "10.0.0.94",
            "public_dns": "ec2-3-226-53-89.compute-1.amazonaws.com",
            "public_ip": "3.226.53.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "QA-nat1"
            },
            "tags_all": {
              "Name": "QA-nat1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d53165253869b11",
            "association_id": "eipassoc-02627bffa0481f725",
            "domain": "vpc",
            "id": "eipalloc-03d53165253869b11",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05448ce0043ea889a",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-54-87-186-225.compute-1.amazonaws.com",
            "public_ip": "54.87.186.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "QA-nat2"
            },
            "tags_all": {
              "Name": "QA-nat2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f72949681df0c5fc",
            "association_id": "eipassoc-053e0a5aac305a9db",
            "domain": "vpc",
            "id": "eipalloc-0f72949681df0c5fc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0993cfc4dd35854b0",
            "private_dns": "ip-10-0-2-63.ec2.internal",
            "private_ip": "10.0.2.63",
            "public_dns": "ec2-34-202-228-144.compute-1.amazonaws.com",
            "public_ip": "34.202.228.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "QA-nat3"
            },
            "tags_all": {
              "Name": "QA-nat3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:353812930160:instance/i-09110f5edee6b2da0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09110f5edee6b2da0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05cf3758ddde94c4c",
            "private_dns": "ip-10-0-100-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fcf8a9d5a10f87c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027646dfcd6d73eef",
            "tags": {
              "Name": "QA-private"
            },
            "tags_all": {
              "Name": "QA-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051e3ec4f0518c588"
            ]
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.private",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:353812930160:instance/i-01106f18a67929767",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01106f18a67929767",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ec01832d4d03a1b",
            "private_dns": "ip-10-0-0-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.210",
            "public_ip": "3.84.27.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0c655a4b3d31ddc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093c9c179e7b683fc",
            "tags": {
              "Name": "QA-public"
            },
            "tags_all": {
              "Name": "QA-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-039d4a1ba6585038c"
            ]
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:internet-gateway/igw-0bc991252849961ab",
            "id": "igw-0bc991252849961ab",
            "owner_id": "353812930160",
            "tags": {
              "Name": "QA"
            },
            "tags_all": {
              "Name": "QA"
            },
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07035f3ecffdc4dbf",
            "association_id": "eipassoc-07f318782faa27549",
            "connectivity_type": "public",
            "id": "nat-0a5c6fc510d23d328",
            "network_interface_id": "eni-0d4f699775a77132c",
            "private_ip": "10.0.0.94",
            "public_ip": "3.226.53.89",
            "subnet_id": "subnet-093c9c179e7b683fc",
            "tags": {
              "Name": "QA-main1"
            },
            "tags_all": {
              "Name": "QA-main1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d53165253869b11",
            "association_id": "eipassoc-02627bffa0481f725",
            "connectivity_type": "public",
            "id": "nat-073882b80d4d6c0ce",
            "network_interface_id": "eni-05448ce0043ea889a",
            "private_ip": "10.0.1.71",
            "public_ip": "54.87.186.225",
            "subnet_id": "subnet-0027fcec1f5c36958",
            "tags": {
              "Name": "QA-main2"
            },
            "tags_all": {
              "Name": "QA-main2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f72949681df0c5fc",
            "association_id": "eipassoc-053e0a5aac305a9db",
            "connectivity_type": "public",
            "id": "nat-095568ac4da6f468d",
            "network_interface_id": "eni-0993cfc4dd35854b0",
            "private_ip": "10.0.2.63",
            "public_ip": "34.202.228.144",
            "subnet_id": "subnet-090d4ff40ff128467",
            "tags": {
              "Name": "QA-main3"
            },
            "tags_all": {
              "Name": "QA-main3"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-0f14109c13da6b741",
            "id": "rtb-0f14109c13da6b741",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a5c6fc510d23d328",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-private1"
            },
            "tags_all": {
              "Name": "QA-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-00caac5e40eb7b0bf",
            "id": "rtb-00caac5e40eb7b0bf",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073882b80d4d6c0ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-private2"
            },
            "tags_all": {
              "Name": "QA-private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-05c836d9294a0bb22",
            "id": "rtb-05c836d9294a0bb22",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-095568ac4da6f468d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-private3"
            },
            "tags_all": {
              "Name": "QA-private3"
            },
            "timeouts": null,
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-0539065b86d55433c",
            "id": "rtb-0539065b86d55433c",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc991252849961ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-public"
            },
            "tags_all": {
              "Name": "QA-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0667f436525220bce",
            "route_table_id": "rtb-0f14109c13da6b741",
            "subnet_id": "subnet-027646dfcd6d73eef"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a11a20fc3f0439e5",
            "route_table_id": "rtb-00caac5e40eb7b0bf",
            "subnet_id": "subnet-08bbd2fd30a933c9c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6f06ee5019e75fe",
            "route_table_id": "rtb-05c836d9294a0bb22",
            "subnet_id": "subnet-002b40a7f723bf57c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076fad634d15e7fab",
            "route_table_id": "rtb-0539065b86d55433c",
            "subnet_id": "subnet-093c9c179e7b683fc"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea561651541a2ad2",
            "route_table_id": "rtb-0539065b86d55433c",
            "subnet_id": "subnet-0027fcec1f5c36958"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a69ebd9f6226eeeb",
            "route_table_id": "rtb-0539065b86d55433c",
            "subnet_id": "subnet-090d4ff40ff128467"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:security-group/sg-051e3ec4f0518c588",
            "description": "private security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051e3ec4f0518c588",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.107.176.20/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "QA-private",
            "name_prefix": "",
            "owner_id": "353812930160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QA-private"
            },
            "tags_all": {
              "Name": "QA-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:security-group/sg-039d4a1ba6585038c",
            "description": "public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039d4a1ba6585038c",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.107.176.20/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "QA-public",
            "name_prefix": "",
            "owner_id": "353812930160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QA-public"
            },
            "tags_all": {
              "Name": "QA-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-027646dfcd6d73eef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027646dfcd6d73eef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-private1"
            },
            "tags_all": {
              "Name": "QA-private1"
            },
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-08bbd2fd30a933c9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bbd2fd30a933c9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-private2"
            },
            "tags_all": {
              "Name": "QA-private2"
            },
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-002b40a7f723bf57c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b40a7f723bf57c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-private3"
            },
            "tags_all": {
              "Name": "QA-private3"
            },
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-093c9c179e7b683fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093c9c179e7b683fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-public1"
            },
            "tags_all": {
              "Name": "QA-public1"
            },
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-0027fcec1f5c36958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0027fcec1f5c36958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-public2"
            },
            "tags_all": {
              "Name": "QA-public2"
            },
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-090d4ff40ff128467",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090d4ff40ff128467",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-public3"
            },
            "tags_all": {
              "Name": "QA-public3"
            },
            "vpc_id": "vpc-07749c89b8fefe7c1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:vpc/vpc-07749c89b8fefe7c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07896576547d6de96",
            "default_route_table_id": "rtb-0f49a477cad2b823f",
            "default_security_group_id": "sg-0edfc8e22f5aadd3e",
            "dhcp_options_id": "dopt-0e99201cc565c86f0",
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07749c89b8fefe7c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f49a477cad2b823f",
            "owner_id": "353812930160",
            "tags": {
              "Name": "QA"
            },
            "tags_all": {
              "Name": "QA"
            }
          }
        }
      ]
    }
  ]
}